dos fixes, removeFirst no existe y metodo asignado a boton